--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="swiper-wrapper">
                                         
                               <div class="swiper-slide pos-rel">
-            <a href="https://www.yamaha-motor.co.id/product/xmax-connected/" target="_blank">
+            <a href="#" target="_blank">
               <picture>
                 <source media="(min-width: 768px)" srcset="uploads/banner/20230221144658.jpg">
                 <img class="sec1-banner" decoding="async" loading="lazy" src="uploads/banner/20230221144658_sp.jpg">
@@ -68,7 +68,7 @@
             </a>
           </div>
                               <div class="swiper-slide pos-rel">
-            <a href="https://www.yamaha-motor.co.id/product/xsr-155/" target="_blank">
+            <a href="#" target="_blank">
               <picture>
                 <source media="(min-width: 768px)" srcset="uploads/banner/20230221144640.jpg">
                 <img class="sec1-banner" decoding="async" loading="lazy" src="uploads/banner/20230221144640_sp.jpg">
@@ -76,7 +76,7 @@
             </a>
           </div>
                               <div class="swiper-slide pos-rel">
-            <a href="https://www.yamaha-motor.co.id/product/all-new-nmax155-connected/" target="_blank">
+            <a href="#" target="_blank">
               <picture>
                 <source media="(min-width: 768px)" srcset="uploads/banner/20230221144749.jpg">
                 <img class="sec1-banner" decoding="async" loading="lazy" src="uploads/banner/20230221144749_sp.jpg">
@@ -84,7 +84,7 @@
             </a>
           </div>
                               <div class="swiper-slide pos-rel">
-            <a href="https://www.yamaha-motor.co.id/product/fazzio/" target="_blank">
+            <a href="#" target="_blank">
               <picture>
                 <source media="(min-width: 768px)" srcset="uploads/banner/20230221144729.jpg">
                 <img class="sec1-banner" decoding="async" loading="lazy" src="uploads/banner/20230221144729_sp.jpg">
